# graphrag-agents-hub

./: AGENTS.md  Dockerfile  GEMINI.md  README.md  a2a_server.py  agent_orchestrator.py  app.py  data_store.py  deploy.sh  diagram_content.txt  fix.py  main.py  patch_bq.py  patch_quicklinks.py  patch_spanner.py  provision_all_data.sh  pyproject.toml  requirements.txt  server.py  test_graph.sql  test_queries.py
deployment_scripts/: provision_bigquery.py  provision_neo4j.py  provision_spanner.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  ArchitectureDiagram.tsx
